# rust-issue-74318

./: Cargo.toml
amadeus-aws/: Cargo.toml
amadeus-aws/src/: lib.rs
amadeus-core/: Cargo.toml
amadeus-core/src/: into_par_stream.rs  lib.rs  par_pipe.rs  par_sink.rs  par_stream.rs  pool.rs  sink.rs  source.rs  util.rs
amadeus-core/src/into_par_stream/: collections.rs  iterator.rs
amadeus-core/src/par_sink/: folder.rs  tuple.rs
amadeus-core/src/par_stream/: flat_map.rs
src/: lib.rs  main.rs  pool.rs  source.rs
src/pool/: thread.rs  util.rs
tests/: cloudfront.rs
