[workspace]

[package]
name = "amadeus"
version = "0.2.0"
authors = ["Alec Mocatta <alec@mocatta.net>"]
edition = "2018"

[dependencies]
amadeus-core = { version = "=0.2.0", path = "amadeus-core" }
amadeus-aws = { version = "=0.2.0", path = "amadeus-aws" }
futures = "0.3"
pin-project = "0.4"
tokio = { version = "0.2", features = ["rt-threaded", "rt-util"] }

[dev-dependencies]
tokio = { version = "0.2", features = ["macros", "time"] }

